--- a/assets/src/sass/app.scss
+++ b/assets/src/sass/app.scss
@@ -30,6 +30,7 @@
 @import "components/modal";
 @import "components/navigation";
 @import "components/pod";
+@import "components/quote";
 @import "components/service";
 @import "components/side-module";
 @import "components/sidebar";
