Updated all image urls to be absolute and added preserveAspectRatio=none to SVGs closes #41

--- a/assets/src/sass/components/_navigation.scss
+++ b/assets/src/sass/components/_navigation.scss
@@ -26,7 +26,7 @@
 
     .nav__link {
       &:after {
-        content: url('../img/global/nav-hover.svg');
+        content: url('/assets/dist/img/global/nav-hover.svg');
         position: absolute;
         top: -13px;
         right: 0;
