--- a/assets/src/sass/components/_side-module.scss
+++ b/assets/src/sass/components/_side-module.scss
@@ -1,7 +1,7 @@
 /* Side Module */
 
 .side-module {
-    background-image: url('../img/side-module/bg--01.svg');
+    background-image: url('/assets/dist/img/side-module/bg--01.svg');
     background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
