--- a/assets/src/sass/forms/select.scss
+++ b/assets/src/sass/forms/select.scss
@@ -9,7 +9,7 @@ select,
   font-size: 1.1875rem;
   line-height: 1.1875rem;
   background: transparent;
-  background-image: url('../img/global/select-icon.svg');
+  background-image: url('/assets/dist/img/global/select-icon.svg');
   background-repeat: no-repeat;
   background-position: calc(100% - 8px) 8px;
   color: $san_juan_50;
