--- a/assets/src/sass/snippets/_highlight.scss
+++ b/assets/src/sass/snippets/_highlight.scss
@@ -8,6 +8,6 @@
     box-sizing: border-box;
 
     &--grey {
-        background-image: url('../img/global/highlight-grey.svg');
+        background-image: url('/assets/dist/img/global/highlight-grey.svg');
     }
 }
