--- a/assets/src/sass/components/_card.scss
+++ b/assets/src/sass/components/_card.scss
@@ -150,7 +150,7 @@
     &__times {
       margin-top: $base-margin*1.5;
       width: 100%;
-      background-image: url('../img/clouds/cloud--blue-darker.svg');
+      background-image: url('/assets/dist/img/clouds/cloud--blue-darker.svg');
       background-size: 100% 100%;
       background-position: center;
       background-repeat: no-repeat;
