--- a/assets/src/sass/components/_quote.scss
+++ b/assets/src/sass/components/_quote.scss
@@ -3,7 +3,7 @@
 .quote {
     width: 100%;
     max-width: 390px;
-    background-image: url('../img/global/highlight-quote.svg');
+    background-image: url('/assets/dist/img/global/highlight-quote.svg');
     background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
