--- a/assets/src/sass/base/_typography.scss
+++ b/assets/src/sass/base/_typography.scss
@@ -104,6 +104,7 @@ h1, h2, h3, h4 {
 
   i {
     color: $puerto_rico;
+    margin-top: -4px;
     margin-left: $base-margin;
     vertical-align: middle;
   }
