--- a/assets/src/sass/components/_title-card.scss
+++ b/assets/src/sass/components/_title-card.scss
@@ -50,7 +50,7 @@
     }
 
     &__action {
-        margin-top: $base-margin*2.5;
+        // margin-top: $base-margin*2.5;
         
         &__title {
             display: inline-block;
