--- a/assets/src/sass/snippets/_highlight.scss
+++ b/assets/src/sass/snippets/_highlight.scss
@@ -10,4 +10,8 @@
     &--grey {
         background-image: url('/assets/dist/img/global/highlight-grey.svg');
     }
+
+    &--green {
+        background-image: url('/assets/dist/img/global/highlight-green.svg');
+    }
 }
