--- a/assets/src/sass/components/_service.scss
+++ b/assets/src/sass/components/_service.scss
@@ -113,7 +113,7 @@
     }
 
     &__details {
-        background-color: $white;
+        background-color: $alabaster;
         color: $mid_gray;
         padding: $base-margin*1.5 $base-margin*2;
         box-sizing: border-box;
