--- a/assets/src/sass/components/_service.scss
+++ b/assets/src/sass/components/_service.scss
@@ -125,16 +125,13 @@
     }
 
     &__contact {
+        background-color: $white;
         color: $mid_gray;
         padding: $base-margin*1.5 $base-margin*2;
         box-sizing: border-box;
 
-        &--telephone {
+        &:nth-child(odd) {
             background-color: $alabaster;
-        }
-
-        &--email {
-            background-color: $white;
         }
 
         > span {
@@ -159,6 +156,20 @@
             &:first-child {
                 margin-right: $base-margin*0.5;
             }
+        }
+    }
+
+    &__social {
+        background-color: $alabaster;
+        font-size: 1.1875rem;
+        line-height: 1.1875rem;
+        padding: $base-margin*1.5 $base-margin*2;
+        box-sizing: border-box;
+        text-align: center;
+
+        a {
+            color: $san_juan;
+            margin: 0 $base-margin*0.5;
         }
     }
 }
