Added all referall form templates closes 39

--- a/assets/src/sass/components/_card.scss
+++ b/assets/src/sass/components/_card.scss
@@ -61,6 +61,7 @@
   &--notification {
     flex-wrap: nowrap;
     align-items: center;
+    max-width: 430px;
     padding: $base-margin*1.5;
   }
 
