Update various components and templates

--- a/assets/src/sass/components/_service.scss
+++ b/assets/src/sass/components/_service.scss
@@ -41,7 +41,7 @@
     }
 
     &__location {
-        background-color: $jungle_green;
+        background-color: $jungle_green !important;
         color: $white;
         font-size: 1.1875rem;
         line-height: 1.625rem;
