--- a/assets/src/sass/snippets/_section.scss
+++ b/assets/src/sass/snippets/_section.scss
@@ -6,10 +6,12 @@
   // Section colours
   &--grey {
     background-color: $gray;
+    margin-bottom: $base-margin*4.5;
   }
 
   &--light-blue {
     background-color: $hawkes_blue;
+    margin-bottom: $base-margin*4.5;
   }
 
   // Padding
