Search grid view

--- a/assets/src/sass/base/_grid.scss
+++ b/assets/src/sass/base/_grid.scss
@@ -77,6 +77,11 @@ body {
     align-items: center;
   }
 
+  // Vertical align bottom
+  &--align-bottom {
+    align-items: flex-end;
+  }
+
   // Horizontal align center
   &--justify {
     justify-content: center;
