--- a/assets/src/sass/components/_service.scss
+++ b/assets/src/sass/components/_service.scss
@@ -58,6 +58,7 @@
     }
 
     &__meta {
+        background-color: $mercury !important;
         display: flex;
         align-items: center;
         background-color: $mercury;
@@ -121,7 +122,7 @@
     }
 
     &__details {
-        background-color: $alabaster;
+        background-color: $alabaster !important;
         color: $mid_gray;
         padding: $base-margin*1.5 $base-margin*2;
         box-sizing: border-box;
