--- a/assets/src/sass/forms/toggle.scss
+++ b/assets/src/sass/forms/toggle.scss
@@ -28,6 +28,7 @@
 
   input[type="radio"] + label {
     cursor: pointer;
+    margin-bottom: 0;
   }
 
   input[type="radio"]:checked + label {
@@ -83,6 +84,7 @@
 
   input[type="checkbox"] + label {
     cursor: pointer;
+    margin-bottom: 0;
   }
 
   input[type="checkbox"]:checked + label {
@@ -105,12 +107,12 @@
   input[type="checkbox"] + label > span > span:before {
     display: none;
     font-family: "Font Awesome 5 Free";
-    font-weight: 400;
+    font-weight: 600;
     content: "\f00c";
-    font-size: 1.5rem;
-    line-height: 1.5rem;
+    font-size: 1.4rem;
+    line-height: 1.4rem;
     color: $san_juan;
-    margin: 4px;
+    margin: 5px;
   }
 
   input[type="checkbox"] + label span:before,
