--- a/assets/src/sass/components/_map.scss
+++ b/assets/src/sass/components/_map.scss
@@ -2,8 +2,7 @@
 
 .map {
     position: relative;
-    width: 960px;
-    max-width: 100%;
+    width: 100%;
     height: 500px;
     border-radius: 25px;
     overflow: hidden;
