--- a/assets/src/sass/components/_pod.scss
+++ b/assets/src/sass/components/_pod.scss
@@ -6,6 +6,11 @@
     width: 100%;
     max-width: 210px;
     text-align: center;
+    
+    > a {
+        display: block;
+        text-decoration: none;
+    }
 
     &__title {
         margin-top: $base-margin*2;
