--- a/assets/src/sass/icons/_variables.scss
+++ b/assets/src/sass/icons/_variables.scss
@@ -1,7 +1,7 @@
 // Variables
 // --------------------------
 
-$fa-font-path:                "/assets/dist//assets/dist/fonts" !default;
+$fa-font-path:                "/assets/dist/fonts" !default;
 $fa-font-size-base:           16px !default;
 $fa-css-prefix:               fa !default;
 $fa-version:                  "5.2.0" !default;
