Added service share section

--- a/assets/src/sass/components/_title-card.scss
+++ b/assets/src/sass/components/_title-card.scss
@@ -53,6 +53,7 @@
         background-repeat: no-repeat;
         color: $san_juan;
         padding: $base-margin*1.5;
+        margin-top: $base-margin*1.5;
         box-sizing: border-box;
 
         label {
