Implemented postcode lookup on search component closes #50

--- a/assets/src/sass/components/_button.scss
+++ b/assets/src/sass/components/_button.scss
@@ -83,7 +83,7 @@
       background: $hawkes_blue;
       border: 5px solid $puerto_rico;
       box-shadow: inset 0px 0px 0px 2px $san_juan;
-      padding: $base-margin - 5px $base-margin*1.5 - 7px;
+      padding: 7px 17px;
 
       &.btn--small {
         padding: $base-margin - 15px $base-margin*1.5 - 14px;
