--- a/assets/src/sass/components/_card.scss
+++ b/assets/src/sass/components/_card.scss
@@ -11,6 +11,12 @@
   &:last-child {
     margin-bottom: 0;
   }
+
+  > a {
+    display: block;
+    width: 100%;
+    text-decoration: none;
+  }
   
   // Card Framing styles
   &--white {
