Added pagination component to search closes #72

--- a/assets/src/sass/app.scss
+++ b/assets/src/sass/app.scss
@@ -28,6 +28,7 @@
 @import "components/media";
 @import "components/modal";
 @import "components/navigation";
+@import "components/pagination";
 @import "components/pod";
 @import "components/quote";
 @import "components/service";
