Implemented Persona and Category search results closes #68 and closes #67

--- a/assets/src/sass/components/_pod.scss
+++ b/assets/src/sass/components/_pod.scss
@@ -21,6 +21,8 @@
 
         img {
             display: block;
+            width: 120px;
+            height: auto;
             margin: 0 auto;
             border: 10px solid $white;
             border-radius: 50%;
