--- a/assets/src/sass/forms/select.scss
+++ b/assets/src/sass/forms/select.scss
@@ -2,7 +2,8 @@
 
 select,
 .select {
-  width: 300px;
+  width: 100%;
+  max-width: 300px;
   padding: $base-margin*0.5 $base-margin*0.75;
   border: 2px solid $mid_gray;
   box-shadow: none;
